--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
 </head>
 <body>
 
-<audio autoplay src="jaz1.mp3"></audio>
+<audio autoplay>
+		<source src="jaz1.mp3" type="audio/mp3"/>
+	</audio>
   <div id="container"></div>
   <a href="" class="hidden"></a>
   	<div class="wrapper">
